# chords

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
src/chords/: __init__.py  __main__.py  analyzer.py  cli.py  harmony.py  mixer.py  pipeline.py  pitch.py  separator.py
tests/: test_pipeline.py
